<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/blue"
    tools:context="com.mera.android.memoirs.ChangPasswordActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="230dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:paddingTop="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_current"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/entercurrentpassword"
            android:inputType="numberPassword" />

        <EditText
            android:id="@+id/edt_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enternewpassword"
            android:inputType="numberPassword" />


        <Button
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF5F3494"
            android:text="@string/ok"
            android:textColor="@android:color/white" />

    </LinearLayout>
</LinearLayout>
