<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/blue"
    android:padding="30dp"
    tools:context="com.mera.android.memoirs.ListVeiwActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_margin="20dp"
        android:background="#FF9B89D2"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/enter_your_password"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="PassWord"
        android:id="@+id/edt_password"
        android:inputType="numberPassword"
        android:backgroundTint="@color/colorPrimary" />

    <Button

        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@android:color/white"
        android:background="#FF231D36"
        android:text="@string/login" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edt_changepassword"
            android:ems="10"
            android:layout_gravity="center"
            android:inputType="textPersonName"
            android:text="@string/change_password" />

    </LinearLayout>
</LinearLayout>
